<resources>
    <string name="app_name">ProgrammingMaster</string>
    <string name="coba">Coba</string>
    <string name="bilanganpertama">Bilangan Pertama</string>
    <string name="bilangankedua">Bilangan Kedua</string>
    <string name="hasil">Hasil</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">Yes Message</string>
    <string name="no_message">No Message</string>
    <string name="tekan">Tekan</string>
    <string name="tekanDariActivity">Dari Activity</string>
    <string name="close">Close</string>
    <string name="open">Open Button</string>
    <string name="pirates">Pirates</string>
    <string name="ninjas">Ninjas</string>
    <string name="developer">Developer</string>
    <string name="programmer">Programmer</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

</resources>
